After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 630540 - SoupURI: never return NULL from soup_uri_decode/soup_uri_normalize
SoupURI: never return NULL from soup_uri_decode/soup_uri_normalize
Status: RESOLVED FIXED
Product: libsoup
Classification: Core
Component: Misc
unspecified
Other All
: Normal normal
: ---
Assigned To: libsoup-maint@gnome.bugs
libsoup-maint@gnome.bugs
Depends on:
Blocks:
 
 
Reported: 2010-09-24 18:10 UTC by Dan Winship
Modified: 2010-11-09 15:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
SoupURI: never return NULL from soup_uri_decode/soup_uri_normalize (5.26 KB, patch)
2010-09-24 18:10 UTC, Dan Winship
committed Details | Review

Description Dan Winship 2010-09-24 18:10:47 UTC
needed to make https://bugs.webkit.org/show_bug.cgi?id=44261
work right. stashing here for now due to hard code freeze
Comment 1 Dan Winship 2010-09-24 18:10:49 UTC
Created attachment 171052 [details] [review]
SoupURI: never return NULL from soup_uri_decode/soup_uri_normalize

Normally you just want to DTRT, and soup_uri_new() already behaved this
way anyway.
Comment 2 Sergio Villar 2010-09-29 14:18:58 UTC
Makes sense to me.

BTW Daw, what's the plan for this patch. Are you going to wait for something to commit it?
Comment 3 Dan Winship 2010-11-09 15:14:43 UTC
Attachment 171052 [details] pushed as 03ba590 - SoupURI: never return NULL from soup_uri_decode/soup_uri_normalize