SoupURI: never return NULL from soup_uri_decode/soup_uri_normalize

Normally you just want to DTRT, and soup_uri_new() already behaved this
way anyway.

https://bugzilla.gnome.org/show_bug.cgi?id=630540